--- a/src/css/result-comparison.scss
+++ b/src/css/result-comparison.scss
@@ -45,4 +45,8 @@
     font-size: 16px;
     padding: 2px 6px;
   }
+  @media all and (max-width: 320px) {
+    font-size: 12px;
+    /*Iphone 5 */
+  }
 }
